# sentinel

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  company.py  docker-compose.yml  main.py  pm_agent.py  requirements.txt  run.py  tools.py
agent-cpp/: .clang-format  CMakeLists.txt  Dockerfile.dev  dev.ps1  dev.sh
agent-cpp/src/: cpu_collector.cpp  cpu_collector.h  main.cpp  memory_collector.cpp  memory_collector.h  metric_collector.h  tcp_sender.cpp  tcp_sender.h
agents/: admin.py  base.py  designer.py  developer.py  marketing.py  openai_agent.py  pm.py  qa.py
dashboard-web/: package-lock.json  package.json
dashboard-web/src/: App.tsx  main.tsx
docs/: protocol.md  recap-phase0-2.html  schema.sql
docs/troubleshooting/: 2026-07-20-jdk-selector-loopback.md
runners/: console.py  discord_bot.py
server-kotlin/: build.gradle.kts  settings.gradle.kts
server-kotlin/src/main/kotlin/com/sentinel/: Application.kt  Cache.kt  MetricsIngest.kt  Persistence.kt
